--- a/views/servicios.html
+++ b/views/servicios.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../estilos/styleservicios.css" />
+    <link rel="stylesheet" href="../estilos/styles.css" />
     <link rel="stylesheet" href="../estilos/stylesweather.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
-    <title>Traveler Assistant - Clima y Moneda</title>
+    <title>Traveler Assistant - Clima, Moneda</title>
 </head>
 <body class="weather">
     <!-- Encabezado principal -->
@@ -76,10 +76,7 @@
                 <h5 class="hint">El resultado aparecerá aquí...</h5>
                 <div id="conversionResult" class="result-large"></div>
               </div>
-            </div>
-        </div>
-    </div>
-
+            </div>   
     <footer class="bg-dark text-white text-center py-3 mt-5">
         &copy; 2024 Travel Agent. Todos los derechos reservados.
     </footer>
@@ -87,7 +84,8 @@
     <!-- Scripts -->
     <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
     <script src="../src/appweather.js"></script>
-    <script src="../src/scripts/currency.js"></script>
+    <script src="../scripts/currency.js"></script>
+    <script src="../scripts/script.js"></script>
     <script>
         // Mostrar y ocultar secciones
         function showSection(section) {
