--- a/views/plan.html
+++ b/views/plan.html
@@ -17,34 +17,41 @@
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
   </head>
   <body>
-    <!-- Barra de navegación -->
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
-          <div class="container">
-              <a class="navbar-brand" href="#">Elitescapes</a>
-              <button
-                  class="navbar-toggler"
-                  type="button"
-                  data-bs-toggle="collapse"
-                  data-bs-target="#navbarNav"
-                  aria-controls="navbarNav"
-                  aria-expanded="false"
-                  aria-label="Toggle navigation"
-              >
-                  <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                  <ul class="navbar-nav">
-                      <li class="nav-item"><a class="nav-link" href="../src/mi_perfil.php">Mi perfil</a></li>
-                      <li class="nav-item"><a class="nav-link active" href="../views/plan.html">Travel Assistant</a></li>
-                      <li class="nav-item"><a class="nav-link" href="../src/reservas.php">Reservas</a></li>
-                      <li class="nav-item"><a class="nav-link " href="../views/servicios.html">Servicios</a></li>
-                      <li class="nav-item"><a class="nav-link " href="../views/mapa.html">Mapa</a></li>
-                  </ul>
-              </div>
-          </div>
+      <header>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Elitescapes</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="../src/mi_perfil.php">Mi perfil</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../views/plan.html">Travel Assistant</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../src/reservas.php">Reservas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../views/servicios.html">Servicios</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../views/mapa.html">Mapa</a>
+            </li>
+          </ul>
+        </div>
       </nav>
-  </header>
+    </header>
      <div class="container">
       <header>
         <h1 class="heading">Traveler Assistant</h1>
