--- a/views/plan.html
+++ b/views/plan.html
@@ -54,12 +54,12 @@
     </header>
      <div class="container">
       <header>
-        <h1 class="heading">Traveler Assistant</h1>
+        <h1 class="heading mt-4 mb-4">Traveler Assistant</h1>
       </header>
       <main>
-        <div class="form-wrapper">
+        <div class="form-wrapper text-center">
           <form id="form-generator">
-            <p class="text-muted destino-detalles">
+            <p class="text-muted destino-detalles mt-4">
               Planifica tu próxima aventura en segundos
             </p>
             <form id="form-generator" class="d-flex flex-column align-items-center">
@@ -67,13 +67,13 @@
                 type="text"
                 placeholder="Your next adventure awaits..."
                 id="user-instructions"
-                class="assistant-input"
+                class="assistant-input align-items-center"
               />
-              <button type="submit" class="btn btn-outline-info"">
+              <button type="submit" class="btn btn-outline-info align-items-center">
                 Generate!
               </button>
             </form>
-          <div class="hint">Next Destination...</div>
+          <div class="hint mb-4">Next Destination...</div>
         </div>
         <div class="answer hidden" id="reponse-generator">
           <div>What are you looking for your next trip...</div>
